route-example.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: store
spec:
 parentRefs:
 - kind: Gateway
   name: internal-http
 hostnames:
 - "store.example.com"
 rules:
 - backendRefs:
   - name: store-v1
     port: 8080
     weight: 90
   - name: store-v2
     port: 8080
     weight: 10
 - matches:
   - path:
       value: /de
   backendRefs:
   - name: store-german
     port: 8080
